# sfe-policy-eval

./: .gdb_history  .gitignore  .gitmodules  .policy_test.cpp.swo  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  cmake_install.cmake  experiment.sh  experimentClient.sh  experimentServer.sh  measure.bat  peda-session-policy_test.txt  policy_test  policy_test.cpp  to_output.py
common/: .gitignore  .policy.cpp.swj  .policy.cpp.swk  .policy.cpp.swl  .policy.cpp.swm  .policy.cpp.swn  .policy.cpp.swo  .policy.cpp.swp  .policy.h.swo  datatypes.h  parser.cpp  parser.h  policy.cpp  policy.h  rules.cpp  rules.h
data/: atomic-target-eval.txt  average.py  average2.py  backup.txt  checks.txt  current_experiment.txt  experiment.txt  experiment1.txt  experiment2.txt  experiment3  experiment3.txt  input.txt  output-online  output-online.txt  output-total.txt  output.txt
data/generation/: .generator.py.swn  .generator.py.swo  full.txt  generator.py  generator.py~
data/results/experiment1/: averages.txt  results.txt
data/results/experiment2/: average2.py  averages.txt
data/results/experiment3/: results.txt
measurements/: csv_output.csv  interpret_measurements.py  output.txt  output0.txt  output1.txt  output2.txt  output3.txt  output_test.txt  temp_csv_output.csv  times.csv  times.txt
